With Home html. Need way to upload by URL in post

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,8 +1,13 @@
-  <p>
+
+<p>
     <b>User:</b>
     <%= comment.commentor %>
   </p>
   <p>
     <b>Comment:</b>
     <%= comment.body %>
-  </p>
+</p>
+<p> <%= link_to "Delete Comment", [comment.post, comment],
+ 			method: :delete,
+ 			data: { confirm: "Confirm Delete" } %>
+</p>
