--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,10 +23,10 @@
     <%= f.label :mediaurl %><br />
     <%= f.text_field :mediaurl %>
   </div>
-  <div class="field">
-    <%= f.label :datestamp %><br />
-    <%= f.text_field :datestamp %>
-  </div>
+   <!--  <div class="field">
+ <%= f.label :datestamp %><br /> 
+    <% f.text_field :datestamp %>
+  </div>-->
   <div class="field">
     <%= f.label :content %><br />
     <%= f.text_area :content %>
