--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,51 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+// Place all the styles related to the home controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
+#body{
+  display: block;
+  background-color: #0A2242; 
+}
+#wrapper{
+  width: 1080px;
+  margin-left: auto;
+  margin-right: auto;
+}
+#banner{
+  position: block;
+  position: absolute;
+  width: 1080px;
+  height: 290px;
+  min-width:800px;
+  margin-left: auto;
+  margin-right: auto;  
+  top: 0px;
+  margin-bottom: 0px;
+  border-width: 0px;
+  box-shadow: 0px 5px 5px #000103;
+}
+.navbar{
+  position: relative;
+  max-width: 800px;
+  height: 30px;
+  margin-left: auto;
+  margin-right: auto;  
+  margin-top: 270px;
+  margin-bottom: 5px;
+  border-width: 0px;
+  background-color: #7BC43E;
+  box-shadow: 0px 5px 5px #000103;
+}
+.backdrop{
+  position: relative;
+  width:1080px;
+  
+  margin-left: auto;
+  margin-right: auto;  
+  margin-top: 0px;
+  margin-bottom: 0px;
+  border-width: 0px;
+  background-color: #A5ADB0;
+}
