--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,32 +21,12 @@
 </p>
 
 <h2>Comments</h2>
-<% @post.comments.each do |comment| %>
-  <p>
-    <b>User:</b>
-    <%= comment.commentor %>
-  </p>
-  <p>
-    <b>Comment:</b>
-    <%= comment.body %>
-  </p>
-<% end %>
+<%= render @post.comments %> 
+
+
 
 <h2>Add a comment</h2>
-<%= form_for([@post, @post.comments.build]) do |f| %>
-  <div class="field">
-    <%= f.label :commentor %></br>
-    <%= f.text_field :commentor %>
-  </div>
-  <div class="field">
-    <%= f.label :body %></br>
-    <%= f.text_area :body %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
-
+<%= render "comments/form" %>
 </br>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
