--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,44 @@
  *= require_self
  *= require_tree .
  */
+#body{
+  display: block;
+  background-color: #0A2242; 
+}
+#wrapper{
+  width: 1080px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.topnav{
+  position: relative;
+  max-width: 1080px;
+  height: 30px;
+  margin-left: auto;
+  margin-right: auto;  
+  margin-top: 0px;
+  margin-bottom: 2px;
+  border-width: 0px;
+  background-color: #7BC43E;
+/*  box-shadow: 0px 5px 5px #000103;*/
+  border-radius: 15px;
+  padding-left: 10px;
+  padding-top: 4px;
+}
+.backdrop{
+  position: relative;
+  max-width:1080px;
+  padding: 5px;
+  margin-left: auto;
+  margin-right: auto;  
+  margin-top: 0px;
+  margin-bottom: 0px;
+  border-width: 0px;
+  background-color: #A5ADB0;
+}
+
+/*.imagePost{
+  position: relative;
+  max-width: 400px;
+  max-height: 400px;
+}*/
