--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -37,10 +37,13 @@
   border-width: 0px;
   background-color: #7BC43E;
   box-shadow: 0px 5px 5px #000103;
+  border-radius: 15px;
+  padding-left: 10px;
+  padding-top: 4px;
 }
 .backdrop{
   position: relative;
-  width:1080px;
+  max-width:1080px;
   
   margin-left: auto;
   margin-right: auto;  
@@ -49,3 +52,7 @@
   border-width: 0px;
   background-color: #A5ADB0;
 }
+/*position: relative;
+  max-width: 400px;
+  max-height: 400px;
+}*/
