--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,17 @@
+<body id="body">
+    <div class="topnav">
+        <%= link_to "Home", root_path %> |
+        <%= link_to 'New Post', new_post_path %>
+    </div>
+
+<div id="wrapper">
+    <div class="backdrop">
 <h1>Listing posts</h1>
 
 <table>
   <tr>
     <th>Name</th>
     <th>Title</th>
-    <th>Mediaurl</th>
-    <th>Datestamp</th>
     <th>Content</th>
     <th></th>
     <th></th>
@@ -13,11 +19,11 @@
   </tr>
 
 <% @posts.each do |post| %>
+
   <tr>
+    <td><%= image_tag post.mediaurl %></td>
     <td><%= post.name %></td>
     <td><%= post.title %></td>
-    <td><%= post.mediaurl %></td>
-    <td><%= post.datestamp %></td>
     <td><%= post.content %></td>
     <td><%= link_to 'Show', post %></td>
     <td><%= link_to 'Edit', edit_post_path(post) %></td>
@@ -30,3 +36,6 @@
 
 <%= link_to 'New Post', new_post_path %> </br>
 <%= link_to "Home", root_path %>
+</div>
+</div>
+</body>
